Funcionalidad Terminada sin editar y sin validar

--- a/app/src/main/res/layout/activity_agregar_personas.xml
+++ b/app/src/main/res/layout/activity_agregar_personas.xml
@@ -52,7 +52,8 @@
     <Spinner
         android:id="@+id/cmbSexo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:entries="@array/sexo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="guardar"
             android:text="@string/guardar" />
 
         <Button
@@ -73,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="limpiar"
             android:text="@string/limpiar" />
     </LinearLayout>
 
