--- a/app/src/main/res/layout/activity_agregar_personas.xml
+++ b/app/src/main/res/layout/activity_agregar_personas.xml
@@ -16,6 +16,14 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <ImageView
+        android:id="@+id/selectFoto"
+        android:layout_width="204dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:onClick="seleccionar_foto"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
